use std::sync::Arc;
use tonic::{Request, Response, Status};

// Note: You'll need to generate this file from your .proto definitions
// and adjust the import path accordingly.
use crate::proto::dsl_engine_service::{
    dsl_engine_service_server::{DslEngineService, DslEngineServiceServer},
    ProcessWorkflowRequest, ProcessWorkflowResponse, GetSystemInfoRequest, GetSystemInfoResponse,
    // ... import all other request/response messages
};

use crate::dsl_manager::DslManager; // Import your DslManager

pub struct DslEngineServiceImpl {
    dsl_manager: Arc<DslManager>,
}

impl DslEngineServiceImpl {
    pub fn new(dsl_manager: Arc<DslManager>) -> Self {
        Self { dsl_manager }
    }
}

#[tonic::async_trait]
impl DslEngineService for DslEngineServiceImpl {
    async fn get_system_info(
        &self,
        request: Request<GetSystemInfoRequest>,
    ) -> Result<Response<GetSystemInfoResponse>, Status> {
        println!("gRPC request from client: {:?}", request);
        // Here you would call the DslManager to get system info
        unimplemented!("get_system_info is not yet implemented");
    }

    async fn process_workflow(
        &self,
        request: Request<ProcessWorkflowRequest>,
    ) -> Result<Response<ProcessWorkflowResponse>, Status> {
        println!("gRPC request from client: {:?}", request);
        // This is a key entry point. You would delegate the workflow
        // processing to the dsl_manager.
        // Example:
        // let workflow_source = &request.get_ref().workflow_source;
        // let result = self.dsl_manager.some_workflow_processor(workflow_source).await;
        unimplemented!("process_workflow is not yet implemented");
    }

    // ... Implement all other RPCs from the .proto file here
    // For now, they can all use the unimplemented!() macro
}

// You would then have a main function or another part of your app
// to start the tonic server with this service implementation.
// Example:
//
// #[tokio::main]
// async fn main() -> Result<(), Box<dyn std::error::Error>> {
//     let addr = "[::1]:50051".parse()?;
//     let dsl_manager = Arc::new(DslManager::new_with_defaults(...)); // Initialize DslManager
//     let engine_service = DslEngineServiceImpl::new(dsl_manager);
//
//     println!("DSLEngineService listening on {}", addr);
//
//     Server::builder()
//         .add_service(DslEngineServiceServer::new(engine_service))
//         .serve(addr)
//         .await?;
//
//     Ok(())
// }
